--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "cy:open": "cypress open"
+    "cy:open": "cypress open",
+    "cy:run": "cypress run"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.6.0",
@@ -63,6 +64,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "cypress": "^13.12.0",
+    "cypress-vite": "^1.5.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
     "postcss": "^8",
